Fixed bug with signupcard alignment

--- a/styles/richText.scss
+++ b/styles/richText.scss
@@ -2,4 +2,10 @@
   a {
     color: hsl(var(--p));
   }
+  .richTextItalic {
+    width: 100%;
+    text-align: center;
+    font-style: italic;
+    margin: 0.75rem 0;
+  }
 }
